--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-ui-search-bar": "^0.4.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-pretty-numbers": "^1.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2"
