--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.5.0",
     "material-ui": "^0.19.3",
     "material-ui-search-bar": "^0.4.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-icons": "^2.2.7",
     "react-pretty-numbers": "^1.3.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2"
