--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: node_js
 node_js:
-  - "node"
-before_install:
-  - npm i -g npm
+  - "7"
 script:
-  - npm run lint
-  - npm run test:cov
-after_success:
-  - npm run coverage
+  - npm test
