--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.19.3",
     "material-ui-search-bar": "^0.4.0",
     "react": "^15.0.0",
+    "react-deploy-s3": "^2.1.2",
     "react-dom": "^15.0.0",
     "react-icons": "^2.2.7",
     "react-pretty-numbers": "^1.3.2",
